# ms-boilerplate

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  __init__.py  compose.yml  pyproject.toml  scripts.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent.yml  ci.yml
app/: main.py
test/: test_main.py
