[project]
name = "app"
version = "0.1.0"
description = "A microservice boilerplate"
authors = [
    {name = "Nicolas Oliver",email = "nicolasoliver03@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"
mdformat = "^0.7.22"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
